# totem

./: configure.ac
src/plugins/playlist-sidebar/: Makefile.am  playlist-sidebar.plugin.in  totem-playlist-sidebar-plugin.vala
